<resources>
    <string name="app_name">GetLocationActivity</string>
    <string name="start_listening">Start Listening</string>
    <string name="stop_listening">STOP LISTENING</string>
    <string name="timestamp">TIMESTAMP :</string>
    <string name="refresh_data">REFRESH DATA</string>
    <string name="lat_lng">LAT, LNG :</string>
    <string name="provider_name">PROVIDER NAME :</string>
    <string name="n_a">n/a</string>
    <string name="textview">TextView</string>
    <string name="accuracy">ACCURACY :</string>
</resources>
